[package]
name = "mq"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
jaq-core = "2.2.0"
jaq-json = { version = "1.1.2", features = ["serde_json"] }
jaq-std = "2.1.1"
pest = "2.1"
pest_derive = "2.1"
rayon = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
walkdir = "2.3"

[dev-dependencies]
assert_fs = "1.0"
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "2.1"
